# Capstone_TREG

./: .gitignore  6.22Night  Cost_Dist.m  Data_Out_Main.m  Diagram.m  Double_Check2.mat  Dynamics_Rollers_L.m  Dynamics_Rollers_no_t.m  Eq2solve.m  Eq2solve_Fly.m  Evaluate_Scale_4_27.m  Figure_Teleop_Targets.m  Figure_Teleop_Targets_7_13.m  Generate_Video.m  Generate_Video_5_4.m  Iterative_Solve.m  Joystick_test.m  Main_Any_Robot.m  Main_Interactive.m  Main_Script_Robot.m  Main_Triangle.m  Main_Triangle_4_28.m  Main_Triangle_5_14.m  Main_Triangle_5_20.m  Main_Triangle_7_13.m  MorphComGUI.fig  MorphComGUI.m  Obj_Augmented_L_grad.m  Obj_Augmented_L_grad2.m  README.md  Robot_Builder.m  Robot_Builder_Good_Crane.m  Robot_Builder_test.m  Run2.mat  Scale_4_Stacks.mat  SendToMorphMaster.m  SerialTestScript.m  Simulation_Run.mat  Simulation_Run_2.mat  Test1_Osc.mat  (+23 more)
MATLAB_Simulation/: Generate_Shape_Order.m  Get_Oct.m  Plot_Robot_Shadow.m  Worm_Bot.m
Motion_Files/: Controled_Motion_Nodes.m  Controled_Motion_Nodes_Dist.m  Controled_Motion_Nodes_Dist_Return.m  Planar_Bisection_Constraint.m  Plot_Edges_h.m  Plot_Node_Boxes_Spec.m  Plot_Node_Boxes_h.m  Plot_Robot_Edges_h.m  mArrow3_h.m
Re_ Interface Code with the Robot/: receiver.cpp  transmitter.cpp
System_Tests/: Crawling_Ground_Speed_Test.tex  Rolling_Ground_Speed_Test.tex
Video_Archive/: BYU_Robot_Crane.avi  Demo_Robot2.avi
pyside6_ui/: Notes.txt  main.py  main.ui  pyproject.toml  ui_main.py
python_simulation/: README.md  anim.py  closed_loop_plotly_sim.py  closed_loop_sim.py  common_data.py  linalg.py  motion.py  (+8 more)
(+73 files in other folders)
